--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,20 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_animation_progress_bar: ^2.0.0
   google_fonts: ^2.0.0
-  like_button: ^2.0.2
+  http: ^0.13.1
+  flutter_spinkit: "^4.1.2"
+  
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.1.5+1
+
+flutter_native_splash: 
+  color: "#0047ab"
+  image: "assets/launch.png"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,9 +57,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
