--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dev_dependencies:
   flutter_native_splash: ^1.1.5+1
 
 flutter_native_splash: 
-  color: "#0047ab"
+  color: "#000000"
   image: "assets/launch.png"
   android: true
   ios: true
